# SquigglyV2

./: CMakeLists.txt  README.md  test.sb
include/: debug.hpp  err.hpp  file_reader.hpp  lex.hpp  parse.hpp  types.hpp
include/utils/: AST.hpp
src/: debug.cpp  err.cpp  lex.cpp  main.cpp  parse.cpp
src/utils/: file_reader.cpp
tests/: CMakeLists.txt  Colors.hpp  main.cpp  tests.hpp
tests/lexer/: lexer_tests.cpp  lexer_tests.hpp
tests/parser/: parser_tests.cpp  parser_tests.hpp
